[gd_scene load_steps=12 format=3 uid="uid://36sugoftp1op"]

[ext_resource type="Texture2D" uid="uid://c2tvq88565gbh" path="res://assets/warrior/robot.webp" id="1_edrtj"]
[ext_resource type="Script" uid="uid://bdtlnplolg227" path="res://assets/warrior/warrior.gd" id="1_rdg2v"]

[sub_resource type="Animation" id="Animation_jn00f"]
resource_name = "Dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [44]
}

[sub_resource type="Animation" id="Animation_pfcbc"]
resource_name = "ExecutingAction"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [32]
}

[sub_resource type="Animation" id="Animation_mfka7"]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [32]
}

[sub_resource type="Animation" id="Animation_qqeta"]
resource_name = "Moving"
length = 4.0
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_rdg2v"]
resource_name = "PreparingAction"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4)]
}

[sub_resource type="Animation" id="Animation_ns5wx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mfka7"]
_data = {
&"Dead": SubResource("Animation_jn00f"),
&"ExecutingAction": SubResource("Animation_pfcbc"),
&"Idle": SubResource("Animation_mfka7"),
&"Moving": SubResource("Animation_qqeta"),
&"PreparingAction": SubResource("Animation_rdg2v"),
&"RESET": SubResource("Animation_ns5wx")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rdg2v"]
size = Vector2(1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qqeta"]
size = Vector2(48.5, 56.25)

[node name="Warrior" type="CharacterBody2D"]
script = ExtResource("1_rdg2v")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_edrtj")
hframes = 8
vframes = 8

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_mfka7")
}

[node name="VisionArea" type="Area2D" parent="."]

[node name="Shape" type="CollisionShape2D" parent="VisionArea"]
shape = SubResource("RectangleShape2D_rdg2v")

[node name="HitBox" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_qqeta")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -29.0
offset_top = -43.0
offset_right = 34.0
offset_bottom = -30.0
max_value = 1.0
value = 1.0
show_percentage = false

[node name="CooldownTimer" type="Timer" parent="."]

[connection signal="animation_finished" from="Animation" to="." method="_on_animation_animation_finished"]
[connection signal="body_entered" from="VisionArea" to="." method="on_unit_detected"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
